# advent_of_code

./: README.md  pyproject.toml
2023/Day1/: Day1.ipynb  input.csv
2023/Day2/: Day2.ipynb
2023/Day3/: Day3.ipynb
2023/Day4/: Day4.ipynb
2023/Day5/: Day5.ipynb
2025/src/: lib.rs
