[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "A project to manage my advent of code challenges"
authors = ["xavierparaujo <xavierparaujo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
