[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "A project to manage my advent of code challenges"
authors = ["xavierparaujo <xavierparaujo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
